[package]
name = "cuesdk-sys"
version = "0.1.0"
authors = ["Patrick Strang <patrick@strang.io>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
kernel32-sys = "0.2"
winreg = "0.7.0"

[build-dependencies]
bindgen = "0.54.1"
