[package]
name = "cuesdk-sys"
version = "0.1.0"
authors = ["Patrick Strang <patrick@strang.io>"]
edition = "2018"
build = "build.rs"

[lib]
name = "cuesdk_sys"

[dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = "^0.3"
kernel32-sys = "^0.2"

[build-dependencies]
bindgen = "0.54"
pkg-config = "0.3"

[target.'cfg(target_env = "msvc")'.build-dependencies]
libc = { version = "0.2", default-features = false }

[features]
use-pkg-config = []
