[package]
name = "cuesdk-sys"
version = "1.0.0"
authors = ["Patrick Strang <patrick@strang.io>"]
edition = "2018"
build = "build.rs"

[lib]
name = "cuesdk_sys"

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = "^0.3"
kernel32-sys = "^0.2"

[build-dependencies]
bindgen = "0.54"

[target.'cfg(target_env = "msvc")'.build-dependencies]
